code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_25.wast
(assert_invalid
  (module (func $type-value-empty-vs-f64 (result f64)
    (block (result f64))
  ))
  "type mismatch"
)